<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/title_activity_termux_settings">

    <Preference
        app:key="display"
        app:title="@string/display_preferences_title"
        app:summary="@string/display_preferences_summary"
        app:iconSpaceReserved="false"
        app:fragment="com.termux.app.fragments.settings.DisplayPreferencesFragment"/>

    <Preference
        app:key="input"
        app:title="@string/input_preferences_title"
        app:summary="@string/input_preferences_summary"
        app:iconSpaceReserved="false"
        app:fragment="com.termux.app.fragments.settings.termux.TerminalIOPreferencesFragment"/>

    <Preference
        app:key="terminal"
        app:title="@string/terminal_advanced_title"
        app:summary="@string/terminal_advanced_summary"
        app:iconSpaceReserved="false"
        app:fragment="com.termux.app.fragments.settings.termux.TerminalPreferencesFragment"/>

    <Preference
        app:key="backup_restore"
        app:title="@string/backup_restore_preferences_title"
        app:summary="@string/backup_restore_preferences_summary"
        app:iconSpaceReserved="false"
        app:fragment="com.termux.app.fragments.settings.termux.BackupRestorePreferencesFragment"/>

    <ListPreference
        app:key="locale_override"
        app:title="@string/locale_override_title"
        app:useSimpleSummaryProvider="true"
        app:entries="@array/locale_override_entries"
        app:entryValues="@array/locale_override_values"
        app:defaultValue="system"
        android:persistent="false"
        app:iconSpaceReserved="false"/>

    <Preference
        app:key="about"
        app:title="@string/about_preference_title"
        android:persistent="false"
        app:iconSpaceReserved="false"/>

    <Preference
        app:key="donate"
        app:title="@string/donate_preference_title"
        android:persistent="false"
        app:isPreferenceVisible="false"
        app:iconSpaceReserved="false"/>

</PreferenceScreen>
