<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/backup_restore_preferences_title">

    <PreferenceCategory
        app:key="backup_restore_full_data"
        app:title="@string/backup_restore_full_data_category_title">

        <Preference
            app:key="backup_container"
            app:title="@string/backup_preference_title"
            app:iconSpaceReserved="false" />

        <Preference
            app:key="restore_container"
            app:title="@string/restore_preference_title"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="backup_restore_settings"
        app:title="@string/backup_restore_settings_category_title">

        <Preference
            app:key="backup_settings_container"
            app:title="@string/backup_settings_title"
            app:iconSpaceReserved="false" />

        <Preference
            app:key="restore_settings_container"
            app:title="@string/restore_settings_title"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>
